Прикрутил докер